Ensure map doesn't wrap when there are several IRC channels

--- a/app/stylesheets/partials/_forms.sass
+++ b/app/stylesheets/partials/_forms.sass
@@ -5,25 +5,25 @@ h1.form-header
 
 form.bp
   +blueprint-form
-  
+
   input
     font-size: 100%
-  
+
   label
     font-weight: normal
-    
+
     color: #333
     display: inline-block
     text-align: right
     width: 120px
     margin-right: 15px
     &:after
-      content: ":"  
-      
+      content: ":"
+
   label.top
     vertical-align: top
     margin-top: 0.5em
-      
+
   label.infield
     position: absolute
     top: 15px
@@ -33,27 +33,27 @@ form.bp
     color: #888
     &:after
       content: ""
-      
+
   p
     margin: 0.25em 0
-    
+
   p.submit
     overflow: hidden
     *zoom: 1
     padding: 1px 0
     margin: 1em 0
 
-  
+
   a.cancel
     display: block
     margin-top: 5px
     float: left
     line-height: 1.5em
     text-decoration: underline
-    
+
   h2
     font-size: 1.2em
-  
+
   hr
     color: #ddd
     background: #ddd
@@ -62,32 +62,32 @@ form.bp
     padding-top 1px
     width: 100%
     border: none
-    
+
   hr.spacer
     color: none
     background: transparent
-    
+
   p
     margin: 0 0 0.5em 0
-    
+
   p.info
     margin: 0 0 0.5em 135px
     color: #666
     font-size: 0.9em
-  
-  p.no-label, .no-label 
+
+  p.no-label, .no-label
     margin: 0 0 0 129px
-      
+
   input.text, input.title, input[type="email"], input[type="text"], input[type="password"]
     color: #555
-  
+
   select
     color: #555
-    
+
   textarea
     width: 300px
     height: 1%
-    
+
   table label
     font-size: 1em
     width: 100%
@@ -95,14 +95,14 @@ form.bp
     text-align: left
     &:after
       content: ""
-  table 
+  table
     input[type="checkbox"], input.checkbox, input[type="radio"], input.radio
       margin: -0.25em 0 0 0
-    
+
   table select
     font-size: 1em
     margin: 0
-    
+
   // dynamic nested model forms
   a.add_nested_fields
     padding: 0 0 0 16px
@@ -115,19 +115,23 @@ form.bp
     display: inline-block
     margin-left: 8px
 
-  span.irc_channels label
-    text-align: left
-    width: auto
-    &:after
-      content: ""  
-      
+  span.irc_channels
+    max-width: 315px
+    display: inline-block
+
+    label
+      text-align: left
+      width: auto
+      &:after
+        content: ""
+
   &.inline
     p, div.field_with_errors
       position: relative
-      
+
     input[type="submit"]
       width: 100%
-  
+
     label
       text-align: left
       &.infield
@@ -143,17 +147,17 @@ form.bp
 form.search
   p
     position: relative
-    
+
   input[type="submit"].inline
     float: left
     margin: 0.7em 10px
-    
+
   input
     float: left
-    
+
 form.mailer
   width: 90%
-  
+
   input.text, input.title, input[type="email"], input[type="text"], input[type="password"]
     width: 60%
 
@@ -166,14 +170,14 @@ body.admin
     // width: 650px
   label
     width: 210px
-  p.no-label, .no-label, p.info 
+  p.no-label, .no-label, p.info
     margin-left: 230px
-  
+
   p.prompt
     width: 650px
     margin: 0 0 0.33em
     text-align: right
-    a 
+    a
       background: url(../../images/right_arrow.gif) no-repeat 100% 0.45em
       padding-right: 14px
 
@@ -193,9 +197,9 @@ input[type="submit"], input[type="button"].gray
 
 input[type="submit"]:hover, input[type="button"].gray:hover
   background: #E5E5E5
-  +linear-gradient(color-stops(#F0F0F0, #E5E5E5))   
-  border: 1px solid #ABABAB 
-       
+  +linear-gradient(color-stops(#F0F0F0, #E5E5E5))
+  border: 1px solid #ABABAB
+
 textarea
   width: 920px
   padding: 5px
